--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -38,5 +38,6 @@ jobs:
 
     - name: Upload App Function
       run: |
-        zip -r app.zip app
-        aws lambda update-function-code --function-name GardenApp --zip-file fileb://./app.zip
+        cd app
+        zip -r ../app.zip *
+        aws lambda update-function-code --function-name GardenApp --zip-file fileb://../app.zip
