--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -29,6 +29,22 @@ jobs:
       with:
         python-version: '3.7'
 
+    - name: Create dependency layer
+      run: |
+        python -m pip install --upgrade pip
+        mkdir python
+        #install all dependencies as defined by requirements.txt in the authorizer directory
+        pip3 install --platform manylinux2010_x86_64 \
+                     --use-deprecated=legacy-resolver  \
+                     --implementation cp \
+                     --python 3.7 \
+                     --only-binary=:all: --upgrade \
+                     -r authorizer/requirements.txt -t ./python
+        #zip files into current directory
+        zip -r gardenLayer.zip ./python
+        aws lambda publish-layer-version --layer-name GardenPythonLayer --zip-file fileb://./gardenLayer.zip --compatible-runtimes python3.6 python3.7 > layer_info.json
+        cat layer_info.json
+
     - name: Upload Globus Auth Function
       run: |
          cp authorizer/lambda_function.py ./lambda_function.py
