--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -31,23 +31,42 @@ jobs:
 
     - name: Upload Globus Auth Function
       run: |
+         # Install the requirements.
          pip3 install --platform manylinux2010_x86_64 \
                       --use-deprecated=legacy-resolver  \
                       --implementation cp \
                       --python 3.9 \
                       --only-binary=:all: --upgrade \
                       -r authorizer/requirements.txt -t ./packages
+         # Put the requirements into the top level of our deployable zip archive.
          cd packages
-         zip -r ../authorizer.zip .
-         cd ..
-         cp authorizer/lambda_function.py ./lambda_function.py
-         zip authorizer.zip ./lambda_function.py
-         zip authorizer.zip ./lambda_function.py         
-         rm ./lambda_function.py
+         zip -r ../authorizer.zip *
+         # Put the application code into the top level of our deployable zip archive.
+         cd ../authorizer
+         zip -r ../authorizer.zip *
+         # Deploy to Lambda.
          aws lambda update-function-code --function-name GardenAuthorizer --zip-file fileb://./authorizer.zip
+         # Delete temporary packages directory
+         cd ..
+         rm -rf packages
 
     - name: Upload App Function
       run: |
-        cd app
+        # Install the requirements.
+        pip3 install --platform manylinux2010_x86_64 \
+                      --use-deprecated=legacy-resolver  \
+                      --implementation cp \
+                      --python 3.9 \
+                      --only-binary=:all: --upgrade \
+                      -r authorizer/requirements.txt -t ./packages
+        # Put the requirements into the top level of our deployable zip archive.
+        cd packages
         zip -r ../app.zip *
+        # Put the application code into the top level of our deployable zip archive.
+        cd ../app
+        zip -r ../app.zip *
+        # Deploy to Lambda.
         aws lambda update-function-code --function-name GardenApp --zip-file fileb://../app.zip
+        # Delete temporary packages directory
+        cd ..
+        rm -rf packages
