--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: INSERT-ROLE-HERE
+          role-to-assume: arn:aws:iam::557062710055:role/GH_Actions_Garden_Secret_Reader
           role-session-name: garden-backend-tester
           aws-region: us-east-1
 
