--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -r ./app/requirements.txt
+          python -m pip install -r ./app/requirements.txt && python -m pip install -r ./app/test-requirements.txt
 
       - name: Lint with flake8
         run: |
