update gh action to target dev/prod by branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev
   workflow_dispatch:
 permissions:
   id-token: write   # This is required for requesting the JWT
@@ -28,6 +29,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
+    # Determine the environment to deploy to based on the branch
+    - name: Set Environment
+      id: vars
+      run: |
+        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          echo "::set-output name=env::prod"
+        else
+          echo "::set-output name=env::dev"
+        fi
 
     - name: Upload Globus Auth Function
       run: |
@@ -45,7 +55,7 @@ jobs:
          cd ../authorizer
          zip -r ../authorizer.zip *
          # Deploy to Lambda.
-         aws lambda update-function-code --function-name GardenAuthorizer --zip-file fileb://../authorizer.zip
+         aws lambda update-function-code --function-name GardenAuthorizer-${{ steps.vars.outputs.env }} --zip-file fileb://../authorizer.zip
          # Delete temporary packages directory
          cd ..
          rm -rf packages
@@ -66,7 +76,7 @@ jobs:
         cd ../app
         zip -r ../app.zip *
         # Deploy to Lambda.
-        aws lambda update-function-code --function-name GardenApp --zip-file fileb://../app.zip
+        aws lambda update-function-code --function-name GardenApp-${{ steps.vars.outputs.env }} --zip-file fileb://../app.zip
         # Delete temporary packages directory
         cd ..
         rm -rf packages
