--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
-    # Determine the environment to deploy to based on the branch
+    # Determine the environment suffix to target to based on the branch
     - name: Set Environment
       id: vars
       run: |
