rename main -> prod in gh action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     branches:
-      - main
+      - prod
       - dev
   workflow_dispatch:
 permissions:
@@ -33,7 +33,7 @@ jobs:
     - name: Set Environment
       id: vars
       run: |
-        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+        if [[ "${{ github.ref }}" == "refs/heads/prod" ]]; then
           echo "::set-output name=env::prod"
         else
           echo "::set-output name=env::dev"
