--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           python -m pip install -r ./app/requirements.txt && python -m pip install -r ./app/test-requirements.txt
 
       - name: Test with pytest
