--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -25,6 +25,8 @@ flake8 = "^5.0.4"
 pre-commit = "^3.1.1"
 black = "^24.1.0"
 isort = "^5.12.0"
+mypy = "^1.9.0"
+httpx = "^0.27.0"
 
 
 [build-system]
