--- a/.github/workflows/deploy-lightsail.yml
+++ b/.github/workflows/deploy-lightsail.yml
@@ -49,15 +49,10 @@ jobs:
         role-to-assume: arn:aws:iam::557062710055:role/GH-action-garden-backend-lightsail-deployer
         aws-region: us-east-1
 
-    - name: Read lightsail deployment config
-      id: read_config
+    - name:  Deploy new image to lightsail container service
       run: |
         CONFIG_JSON=$(cat ./infra/modules/lightsail/deployment-config.json | jq -c .)
         echo $CONFIG_JSON
-        echo "config=$CONFIG_JSON" >> $GITHUB_OUTPUT
-
-    - name:  Deploy new image to lightsail container service
-      run: |
         aws lightsail create-container-service-deployment \
           --service-name garden-service-${{ steps.vars.outputs.env }} \
-          --cli-input-json "${{ steps.read_config.outputs.config }}"
+          --cli-input-json $CONFIG_JSON
