--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -12,6 +12,8 @@ pydantic = "^1.10.13"  # same as garden sdk
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 gunicorn = "^21.2.0"
+globus-sdk = "^3.39.0"
+cachetools = "^5.3.3"
 
 [tool.poetry.group.develop]
 optional = true
@@ -26,6 +28,7 @@ black = "^24.1.0"
 isort = "^5.12.0"
 mypy = "^1.9.0"
 httpx = "^0.27.0"
+types-cachetools = "^5.3.0.7"
 
 
 [build-system]
