--- a/.github/workflows/deploy-lightsail.yml
+++ b/.github/workflows/deploy-lightsail.yml
@@ -50,22 +50,26 @@ jobs:
         aws-region: us-east-1
 
       # injects AWS credentials for "garden_lightsail_user_{dev, prod}" IAM user
-    - name:  (re-)deploy image to lightsail container service
+    - name: (re-)deploy image to lightsail container service
       run: |
         if [[ "${{ github.ref }}" == "refs/heads/prod" ]]; then
-          CONFIG_JSON=$(jq '.containers["garden-backend-service"].environment = {
-            "AWS_ACCESS_KEY_ID": "${{ secrets.PROD_AWS_ACCESS_KEY_ID }}",
-            "AWS_SECRET_ACCESS_KEY": "${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}"
-          }' ./infra/modules/lightsail/deployment-config.json)
+          CONFIG_JSON=$(jq --arg akid "${{ secrets.PROD_AWS_ACCESS_KEY_ID }}" \
+                            --arg sak "${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}" \
+            '.containers["garden-backend-service"].environment = {
+              "AWS_ACCESS_KEY_ID": $akid,
+              "AWS_SECRET_ACCESS_KEY": $sak
+            }' ./infra/modules/lightsail/deployment-config.json)
           aws lightsail create-container-service-deployment \
             --service-name garden-service-${{ steps.vars.outputs.env }} \
-            --cli-input-json $CONFIG_JSON
+            --cli-input-json "$CONFIG_JSON"
         else
-          CONFIG_JSON=$(jq '.containers["garden-backend-service"].environment = {
-            "AWS_ACCESS_KEY_ID": "${{ secrets.DEV_AWS_ACCESS_KEY_ID }}",
-            "AWS_SECRET_ACCESS_KEY": "${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}"
-          }' ./infra/modules/lightsail/deployment-config.json)
+          CONFIG_JSON=$(jq --arg akid "${{ secrets.DEV_AWS_ACCESS_KEY_ID }}" \
+                            --arg sak "${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}" \
+            '.containers["garden-backend-service"].environment = {
+              "AWS_ACCESS_KEY_ID": $akid,
+              "AWS_SECRET_ACCESS_KEY": $sak
+            }' ./infra/modules/lightsail/deployment-config.json)
           aws lightsail create-container-service-deployment \
             --service-name garden-service-${{ steps.vars.outputs.env }} \
-            --cli-input-json $CONFIG_JSON
+            --cli-input-json "$CONFIG_JSON"
         fi
