--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = {extras = ["standard"], version = "^0.29.0"}
 gunicorn = "^21.2.0"
 globus-sdk = "^3.39.0"
 cachetools = "^5.3.3"
+boto3 = "^1.34.84"
 
 [tool.poetry.group.develop]
 optional = true
