--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -15,6 +15,7 @@ gunicorn = "^21.2.0"
 globus-sdk = "^3.39.0"
 cachetools = "^5.3.3"
 boto3 = "^1.34.84"
+email-validator = "^2.1.1"
 
 [tool.poetry.group.develop]
 optional = true
