--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "^1.10.13"  # same as garden sdk
+pydantic = "^2.7.1"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 gunicorn = "^21.2.0"
@@ -16,6 +16,7 @@ globus-sdk = "^3.39.0"
 cachetools = "^5.3.3"
 boto3 = "^1.34.84"
 email-validator = "^2.1.1"
+pydantic-settings = "^2.2.1"
 
 [tool.poetry.group.develop]
 optional = true
