--- a/.github/workflows/deploy-lightsail.yml
+++ b/.github/workflows/deploy-lightsail.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v2
 
     # Determine the environment suffix to target to based on the branch
+    # note than manually running this from a branch other than dev or prod
+    # will set env=dev, as though running from the real dev branch.
     - name: Set Environment
       id: vars
       run: |
