--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,4 +38,4 @@ jobs:
 
       - name: Check for vulnerable libraries with safety
         run: |
-          safety check
+          poetry run safety check
