--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,10 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: upgrade pip
+        run: |
+          pip install --upgrade pip
+
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
         with:
