--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,10 +21,6 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: upgrade pip
-        run: |
-          pip install --upgrade pip
-
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
         with:
@@ -33,6 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           cd ./garden-backend-service
+          pip install --upgrade pip && \
+          poetry config virtualenvs.create false && \
           poetry install --no-interaction --no-ansi --with=develop
 
       - name: Test with pytest
