--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -5,6 +5,7 @@ description = "Source code for the garden backend API"
 authors = ["Owen Price Skelly <owenpriceskelly@uchicago.edu>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -17,6 +18,9 @@ cachetools = "^5.3.3"
 boto3 = "^1.34.84"
 email-validator = "^2.1.1"
 pydantic-settings = "^2.2.1"
+sqlalchemy = "^2.0.30"
+asyncpg = "^0.29.0"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.develop]
 optional = true
