--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,15 +22,24 @@ jobs:
           python-version: "3.10"
 
       - name: Install poetry
-        uses: abatilo/actions-poetry@v2
+        uses: abatilo/actions-poetry@v3
+
+      - name: Setup local virtual environment
+        run: |
+          cd ./garden-backend-service
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+
+      - uses: actions/cache@v3
+        name: Define a cache for the venv based on the lock file
         with:
-          poetry-version: 1.4.1
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
 
       - name: Install dependencies
         run: |
           cd ./garden-backend-service
           pip install --upgrade pip && \
-          poetry config virtualenvs.create false && \
           poetry install --no-interaction --no-ansi --with=develop
 
       - name: Test with pytest
