--- a/.gitignore
+++ b/.gitignore
@@ -105,12 +105,14 @@ celerybeat.pid
 
 # Environments
 .env
+.env.postgres
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
 
 # Spyder project settings
 .spyderproject
