--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -21,6 +21,7 @@ pydantic-settings = "^2.2.1"
 sqlalchemy = "^2.0.30"
 asyncpg = "^0.29.0"
 psycopg2 = "^2.9.9"
+alembic = "^1.13.1"
 
 [tool.poetry.group.develop]
 optional = true
