--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -39,6 +39,8 @@ mypy = "^1.9.0"
 httpx = "^0.27.0"
 types-cachetools = "^5.3.0.7"
 safety = "^3.2.0"
+pytest-asyncio = "^0.23.7"
+aiosqlite = "^0.20.0"
 
 
 [build-system]
