--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -21,6 +21,8 @@ pydantic-settings = "^2.2.1"
 sqlalchemy = "^2.0.30"
 asyncpg = "^0.29.0"
 psycopg2 = "^2.9.9"
+alembic = "^1.13.1"
+greenlet = "^3.0.3"
 
 [tool.poetry.group.develop]
 optional = true
@@ -37,6 +39,8 @@ mypy = "^1.9.0"
 httpx = "^0.27.0"
 types-cachetools = "^5.3.0.7"
 safety = "^3.2.0"
+pytest-asyncio = "^0.23.7"
+aiosqlite = "^0.20.0"
 
 
 [build-system]
