fix safety policy

--- a/garden-backend-service/.safety-policy.yml
+++ b/garden-backend-service/.safety-policy.yml
@@ -11,6 +11,9 @@ security: # configuration for the `safety check` command
         67599: # Vulnerability ID
             reason: this is for an issue in pip 24.0 that only applies if installing from a private index. it's also apparently just the intended behavior.
 
+        70612: # Vulnerability ID
+            reason: Jinja2 is only a dependency because of safety itself. Also, per the vulnerability description, the maintainer and multiple third parties believe that this vulnerability isn't valid.
+
     continue-on-vulnerability-error: False # Suppress non-zero exit codes when vulnerabilities are found. Enable this in pipelines and CI/CD processes if you want to pass builds that have vulnerabilities. We recommend you set this to False.
 alert: # configuration for the `safety alert` command
     security:
