--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -41,6 +41,7 @@ types-cachetools = "^5.3.0.7"
 safety = "^3.2.0"
 pytest-asyncio = "^0.23.7"
 aiosqlite = "^0.20.0"
+ipython = "^8.25.0"
 
 
 [build-system]
