--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -18,11 +18,13 @@ cachetools = "^5.3.3"
 boto3 = "^1.34.84"
 email-validator = "^2.1.1"
 pydantic-settings = "^2.2.1"
-sqlalchemy = "^2.0.30"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 asyncpg = "^0.29.0"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 alembic = "^1.13.1"
 greenlet = "^3.0.3"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.7"
 
 [tool.poetry.group.develop]
 optional = true
@@ -42,6 +44,7 @@ safety = "^3.2.0"
 pytest-asyncio = "^0.23.7"
 aiosqlite = "^0.20.0"
 ipython = "^8.25.0"
+testcontainers = "^4.5.1"
 
 
 [build-system]
