--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -45,6 +45,7 @@ pytest-asyncio = "^0.23.7"
 aiosqlite = "^0.20.0"
 ipython = "^8.25.0"
 testcontainers = "^4.5.1"
+flake8-pytest-style = "^2.0.0"
 
 
 [build-system]
