--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,14 +5,15 @@ on:
       - "*"
   workflow_dispatch:
 permissions:
-  id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkout
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     name: build
+
     steps:
       - uses: actions/checkout@v2
 
@@ -21,14 +22,26 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install poetry
-        uses: abatilo/actions-poetry@v3
+      - name: Install pipx
+        run: |
+          python -m pip install --user pipx
+          python -m pipx ensurepath
+        shell: bash
+
+      - name: Install poetry with pipx
+        run: |
+          pipx install poetry
+        shell: bash
+
+      - name: Add poetry to PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Setup local virtual environment
         run: |
           cd ./garden-backend-service
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
+        shell: bash
 
       - uses: actions/cache@v3
         name: Define a cache for the venv based on the lock file
@@ -39,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd ./garden-backend-service
-          pip install --upgrade pip && \
+          pip install --upgrade pip
           poetry install --no-interaction --no-ansi --with=develop
 
       - name: Test with pytest
