--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -18,11 +18,12 @@ cachetools = "^5.3.3"
 boto3 = "^1.34.84"
 email-validator = "^2.1.1"
 pydantic-settings = "^2.2.1"
-sqlalchemy = "^2.0.30"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 asyncpg = "^0.29.0"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 alembic = "^1.13.1"
 greenlet = "^3.0.3"
+httpx = "^0.27.0"
 
 [tool.poetry.group.develop]
 optional = true
@@ -31,6 +32,7 @@ optional = true
 pytest = "^7.2.0"
 pytest-mock = "^3.10.0"
 pytest-cov = "^4.0.0"
+pytest-asyncio = "^0.23.7"
 flake8 = "^5.0.4"
 pre-commit = "^3.1.1"
 black = "^24.1.0"
@@ -39,11 +41,16 @@ mypy = "^1.9.0"
 httpx = "^0.27.0"
 types-cachetools = "^5.3.0.7"
 safety = "^3.2.0"
-pytest-asyncio = "^0.23.7"
 aiosqlite = "^0.20.0"
 ipython = "^8.25.0"
+testcontainers = "^4.5.1"
+flake8-pytest-style = "^2.0.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = ["integration"]
+        
