--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -47,6 +47,7 @@ aiosqlite = "^0.20.0"
 ipython = "^8.25.0"
 testcontainers = "^4.5.1"
 flake8-pytest-style = "^2.0.0"
+pytest-random-order = "^1.1.1"
 
 
 [build-system]
@@ -55,3 +56,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 markers = ["integration"]
+addopts = "--random-order"
