--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -24,6 +24,8 @@ psycopg2-binary = "^2.9.9"
 alembic = "^1.13.1"
 greenlet = "^3.0.3"
 httpx = "^0.27.0"
+pydantic-extra-types = "^2.9.0"
+phonenumbers = "^8.13.40"
 
 [tool.poetry.group.develop]
 optional = true
