--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -26,6 +26,7 @@ greenlet = "^3.0.3"
 httpx = "^0.27.0"
 pydantic-extra-types = "^2.9.0"
 phonenumbers = "^8.13.40"
+structlog = "^24.4.0"
 
 [tool.poetry.group.develop]
 optional = true
