--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -27,6 +27,7 @@ httpx = "^0.27.0"
 pydantic-extra-types = "^2.9.0"
 phonenumbers = "^8.13.40"
 structlog = "^24.4.0"
+modal = "^0.64.119"
 
 [tool.poetry.group.develop]
 optional = true
