--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+modal = "^0.64.122"
 pydantic = "^2.7.1"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
@@ -39,6 +40,7 @@ pytest-asyncio = "^0.23.7"
 flake8 = "^5.0.4"
 pre-commit = "^3.1.1"
 black = "^24.1.0"
+jupyter = "1.1.1"
 isort = "^5.12.0"
 mypy = "^1.9.0"
 httpx = "^0.27.0"
