--- a/garden-backend-service/pyproject.toml
+++ b/garden-backend-service/pyproject.toml
@@ -27,7 +27,7 @@ httpx = "^0.27.0"
 pydantic-extra-types = "^2.9.0"
 phonenumbers = "^8.13.40"
 structlog = "^24.4.0"
-modal = "^0.64.119"
+modal = "^0.64.122"
 
 [tool.poetry.group.develop]
 optional = true
@@ -40,6 +40,7 @@ pytest-asyncio = "^0.23.7"
 flake8 = "^5.0.4"
 pre-commit = "^3.1.1"
 black = "^24.1.0"
+jupyter = "1.1.1"
 isort = "^5.12.0"
 mypy = "^1.9.0"
 httpx = "^0.27.0"
